Fixed missing > in default.html.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <link rel="stylsheet" href="{{ site.baseurl }}/css/trac.css"
+    <link rel="stylsheet" href="{{ site.baseurl }}/css/trac.css">
     <script src='http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS_CHTML'></script>
   </head>
   <body>
