Little edits as I wrote the corresponding tutorial section.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="{{ site.baseurl }}/css/consolite.css" />
+    <link rel="stylesheet" href="{{ site.baseurl }}/css/gruvbox.css" />
     <script src='https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS_CHTML'></script>
   </head>
   <body>
